Idle pre-training is gone: HostWarmup calibrates the host and does nothing else, WorkerAotBootstrap and the javac trainer's optimize entry are deleted, the optimize-request verb and its two wire frames go with the templates/optimize fixtures nothing referenced, and IdleHousekeeping loses the force plumbing only that verb used. The `optimize` journal trigger is gone with the verb; EnginePrewarm keeps its early start for the JDK download it renders.