@@ -1,18 +1,20 @@
-# Host warmup: worker AOT + calibration (engine self-heal)
+# Host warmup: calibration on the idle engine
 
-JumpKick pre-trains compiler-worker AOT caches and host calibration **inside the resident
-engine** — there is no user-facing `jk optimize` or `jk engine calibrate` command.
+JumpKick measures the host **inside the resident engine** and keeps the result in
+`state/builds/host-metrics.toml`. There is no user-facing command for it; the engine does it when
+nothing else is running.
 
 ## When it runs
 
 | Trigger | Behavior |
 |---------|----------|
-| **First engine start** | Queue idle warmup (feeds → templates → AOT → cal) |
-| **Every minute** | Poll `config.toml` mtime (reload policy); check wall-clock 12 h stamp |
-| **Every ~12 h wall-clock** (laptop-safe) | Feeds + `jk-templates` freshen + cache GC enqueue + AOT/cal if still missing |
-| **JDK / jk version change** | Calibration re-probes when host JDK id or jk version no longer matches |
+| **First engine start** | Queue idle warmup (feeds → templates → calibration) |
+| **Every minute** | Poll `config.toml` mtime (reload policy); check the wall-clock 12 h stamp |
+| **Every ~12 h wall-clock** (laptop-safe) | Feeds + `jk-templates` freshen + cache GC enqueue + calibration if still missing or stale |
+| **JDK / jk version change** | Calibration re-probes when the host JDK id or the jk version no longer matches |
 
-The 12 h interval is **wall-clock since last stamp**, checked each minute — a laptop that never stays up 12 hours continuously still refreshes after resume once 12 h have elapsed.
+The 12 h interval is **wall-clock since the last stamp**, checked each minute — a laptop that
+never stays up 12 hours continuously still refreshes after resume once 12 h have elapsed.
 
 Disable with user config:
 
@@ -21,111 +23,44 @@ Disable with user config:
 auto-warmup = false
 ```
 
-Or env: `JK_AUTO_WARMUP=off`. Worker AOT also respects `JK_AOT_TRAIN=off` / `JK_WORKER_AOT=off`.
+Or env: `JK_AUTO_WARMUP=off`.
 
 ## Warmup order (idle worker)
 
 1. **`libs.global.toml`** — `<store>/libs.global.toml` (`JkDirs.libraryRegistry()`); conditional GET / ETag (skip if fresh)
 2. **`jdks.json`** — TTL + If-Modified-Since
-3. **Official `jk-templates` shallow clone** — `<store>/templates` (`JkDirs.templates()`); `git fetch --depth 1` / clone (includes future AOT fixtures)
-4. **java-compiler AOT** — only if missing for this host
-5. **Host calibration** — only if missing/stale for this jk version + JDK
+3. **Official `jk-templates` shallow clone** — `<store>/templates` (`JkDirs.templates()`); `git fetch --depth 1` / clone
+4. **Host calibration** — only if missing or stale for this jk version + JDK
 
-Network errors are **fail-fast and quiet** (no retries). The next minute/12 h cycle or engine restart tries again.
+Steps 1–3 belong to the maintenance cycle (`EngineMaintenance`) and run whether or not
+`auto-warmup` is on; step 4 is `HostWarmup`, behind the switch. Network errors are **fail-fast and
+quiet** (no retries). The next minute/12 h cycle or engine restart tries again.
 
-## What is trained
+## What calibration writes
 
 | Artifact | Notes |
 |----------|--------|
-| **java-compiler-`<jk-version>`-*.aot** | Zinc Java incremental worker (HotSpot 25+) — pre-trained on idle |
-| **engine-`<jk-version>`-*.aot** | Resident engine JAR (sidecar train; same GC / native-access as serve) |
-| **host-metrics.toml `[calibration]`** | HardwareProbe multi-probe for cold ETA |
+| **host-metrics.toml `[calibration]`** | `HardwareProbe` multi-probe (JVM fork, javac, disk, hash, JUnit fork and run, resolve) for the cold ETA |
+| **worker jars in the artifact store** | The probe forks the java-compiler and test-runner workers, which `PluginJar.locate()` fetches into `<store>` |
 
-**Not** pre-trained: **Kotlin** — trains on miss at the first real Kotlin compile (classpath is
-project/version-specific; a dedicated bootstrap key would not match production forks). **Formatter**
-— trains on miss at the first {@code jk format} (same PluginAot path; Palantir/ktfmt jars are
-resolved per run). List caches with `jk engine aot`.
-**Not** AOT-cached at all: **Groovy** workers (no cache integration yet) and test-runner AOT
-(suite classpath includes project classes; caches are not reusable).
+Every root the pass writes under is outside `JK_CACHE_DIR`, so `jk cache nuke` is not undone by the
+next cycle. After a store wipe the running engine stands down (`StoreWriteGate.wipedSinceStart`)
+and the next engine rebuilds what it needs.
 
-### AOT on upgrade / displace
-
-All JEP 514 caches live under the **shared** `state/aot/` directory (not next to
-`lib/jk-engine/`). File names carry the product version:
-
-- `engine-0.13.0-<key>.aot`
-- `java-compiler-0.13.0-<key>.aot` / `kotlinc-0.13.0-<key>.aot`
-
-Policy when a generation becomes primary (endpoint claim / `jk self materialize` — not every
-ensure of an already-live same-version engine), and again when install GC removes
-retired `jk-engine-*.jar` files / parked `jk.old`:
-
-1. **Reap other versions** — delete every AOT artifact whose name is not for this exact
-   product version (no `-<version>-<16hex>` segment). Legacy unversioned worker names
-   (`java-compiler-<key>.aot`) are dropped. **This version's** caches are kept so a respawn
-   does not discard a just-trained engine AOT.
-2. **Displaced engines** — kill any engine AOT training sidecar **and** suppress all further
-   AOT training in that process (workers included), so they cannot recreate missing caches
-   while draining.
-3. **New primary** — maps existing same-version caches; trains engine/workers on miss.
-
-Old product lines' multi‑tens of MiB of AOT do not accumulate across upgrades.
-
-### `aot.toml` (human index)
-
-Cache file names are content hashes (`tool` + JDK home/vendor/version + GC + classpath for workers;
-engine jar identity + JDK for the engine). Open **`~/.jk/state/aot/aot.toml`** (or
-`$JK_STATE_DIR/aot/aot.toml`) for a readable table of each file: tool, key, status (`ready` /
-`pending` / `noaot` / `empty` — a zero-byte cache from an interrupted train), size, JDK, GC,
-classpath, JVM flags, and timestamps. Written on train / use / sweep; safe to delete or hand-edit
-(a corrupt file is regenerated on the next write).
-
-List the same details from the CLI:
-
-```bash
-jk engine aot              # summary table + per-cache details
-jk engine aot -O json      # machine-readable
-```
-
-### Training failure and retry semantics
-
-Training failures back off, but never permanently. The claim-file backoff below is the worker
-trainer's own; the `.noaot` marker rules are shared with the engine's key, which lives in the same
-directory under the same marker:
-
-- **Trainer fails** (nonzero exit): a sticky `.noaot` marker sibling is written and the key is
-  skipped — no retry storm from retrying on every compile.
-- **Trainer overruns** (120 s watchdog): **no** sticky marker — an overrun is usually transient
-  (first Kotlin compile on a loaded machine). The training claim file is kept instead, which
-  blocks retrains for ~10 minutes; the next compile after that retries.
-- **Marker TTL**: a `.noaot` marker older than **7 days** is treated as absent at read time and
-  removed, giving a once-failed key a fresh training attempt. (A JDK/Kotlin/GC bump mints a new
-  key and retries immediately, marker or not.) This applies to the engine's marker too: its key is
-  stable for the life of an install, so without the expiry one bad minute would disable engine AOT
-  until the next engine or JDK upgrade.
-- **Pending-row TTL**: a killed trainer leaves a `pending` row in `aot.toml` whose `.aot` file will
-  never appear, so no on-disk sweep can see it. A pending row older than **1 hour** — well past the
-  two-minute cap either trainer runs under — is dropped the next time the manifest is reconciled.
-
-Work runs on a **daemon idle thread** when `activeBuildPlans == 0` so client builds are not blocked.
-Within a maintenance workset, **`System.gc()` is always last** — after prune, journal/metrics
-retention, metrics harvest, feeds/templates, AOT train, and calibration — so the heap is not
+Work runs on a **daemon idle thread** when `activeBuildPlans == 0` so client builds are not
+blocked. Within a maintenance workset, **`System.gc()` is always last** — after prune,
+journal/metrics retention, metrics harvest, feeds/templates and calibration — so the heap is not
 shrunk mid-chore.
 
-## Engine first start (related)
-
-| Step | Behavior |
-|------|----------|
-| **Engine AOT** | Sidecar train via `-Djk.aot.train.output` (flags match serving spawn, including `--enable-native-access=ALL-UNNAMED`) |
 ## Install
 
 ```text
 jk engine start    # queues self-heal if needed; returns when engine is up
 ```
 
-No separate optimize/calibrate steps. Warmup continues in the background after install returns.
+No separate calibrate step. Warmup continues in the background after install returns.
 
 ## Synthetic history
 
-Internal train/calibrate builds (if any) use triggers `optimize` / `calibrate` / `synthetic` and are
-omitted from `jk history` / the web activity feed.
+Internal calibration builds use the triggers `calibrate` / `synthetic` and are omitted from
+`jk history` / the web activity feed.
